<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/LayoutEncabezado"
        android:layout_width="match_parent"
        android:layout_height="60dp" >  
    
    	<ImageView
        	android:id="@+id/logo1"
        	android:layout_width="40dp"
        	android:layout_height="40dp"
        	android:src="@drawable/logo" 
        	android:layout_alignParentLeft="true"
        	android:contentDescription="@string/definicion_logo" />

    	<Button
    	    android:id="@+id/Boton_Ayuda_Observatorio1"
    	    android:layout_width="40dp"
    	    android:layout_height="40dp"
    	    android:layout_alignParentRight="true"
    	    android:text="@string/ayuda" />
    
	</RelativeLayout>
	
    <TextView
        android:id="@+id/Titulo_Menu_Opciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titulo_observatorio"
        android:textSize="28sp" />   
    
    <TextView
        android:id="@+id/Seleccion_Provincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"            	                
        android:layout_gravity="center"
        android:text="@string/sel_provincia"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/Opciones_Provincia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" 
        android:gravity="center"
        android:prompt="@string/vacio" />
    
    <TextView
        android:id="@+id/Seleccion_Categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"            	                
        android:layout_gravity="center"
        android:text="@string/sel_categoria"
        android:textSize="18sp" />
 
    <Spinner
    	android:id="@+id/Opciones_Categoria"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"   	
    	android:gravity="center"
    	android:prompt="@string/vacio" />

    
    <Button
        android:id="@+id/Boton_Aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/aceptar" />
	

</LinearLayout>
