<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/LayoutEncabezado"
        android:layout_width="match_parent"
        android:layout_height="60dp" >  
    
    	<ImageView
        	android:id="@+id/logo1"
        	android:layout_width="40dp"
        	android:layout_height="40dp"
        	android:src="@drawable/logo" 
        	android:layout_alignParentLeft="true"
        	android:contentDescription="@string/definicion_logo" />

    	<Button
    	    android:id="@+id/Boton_Ayuda_Mercadillos2"
    	    android:layout_width="40dp"
    	    android:layout_height="40dp"
    	    android:layout_alignParentRight="true"
    	    android:text="@string/ayuda" />  
	</RelativeLayout>
	
    <TextView
        android:id="@+id/Titulo_Mercadillos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titulo_mercadillos"
        android:textSize="28sp" />   
  
    <TextView
       	android:id="@+id/Isla"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_marginTop="10dp"  
       	android:layout_marginLeft="20dp"            	                                  	                
       	android:text="@string/isla"
        android:textSize="14sp" />
	
    <TextView
       	android:id="@+id/Categoria"
      	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_marginTop="10dp"  
       	android:layout_marginLeft="20dp"            	                                  	                                  	                
       	android:text="@string/categoria"
        android:textSize="14sp" />
    
    <fragment android:id="@+id/MapaSupermercadosM"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        class="com.google.android.gms.maps.SupportMapFragment"/>

</LinearLayout>